修复了子弹会重复造成伤害的bug，并且添加了之前遗漏的子弹的图片

--- a/resource.qrc
+++ b/resource.qrc
@@ -8,5 +8,6 @@
         <file>pictures/python.png</file>
         <file>pictures/R.png</file>
         <file>pictures/smallbug.png</file>
+        <file>pictures/bullet.png</file>
     </qresource>
 </RCC>
